<resources>
    <string name="app_name">Arjuna Laundry</string>
    <string name="belummemilikiakun">Belum memiliki akun ?</string>
    <string name="register">Register</string>
    <string name="masuk">Masuk</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="nama">Nama</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="pesanan">Pesanan</string>
    <string name="home">Home</string>
    <string name="riwayat">Riwayat</string>
    <string name="user">User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="layanan_kami">Layanan Kami</string>
    <string name="pesanan_aktif">Pesanan Aktif</string>
    <string name="kalkulator">Kalkulator</string>
    <string name="voucher">Voucher</string>
    <string name="berat">Berat</string>
    <string name="jenis">Jenis</string>
    <string name="total">Total</string>
    <string name="alamat_pengiriman">Alamat Pengiriman</string>
    <string name="biaya_pengiriman">Biaya Pengiriman</string>
    <string name="save">Save</string>
</resources>