<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/home"
        android:title="@string/home" />
    <item
        android:id="@+id/pesanan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/pesanan"
        android:title="@string/pesanan" />
    <item
        android:id="@+id/riwayat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/riwayat"
        android:title="@string/riwayat" />
    <item
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/user"
        android:title="@string/user" />
</menu>