<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/biru"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        app:srcCompat="@drawable/logo" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/rectangle_5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/imageView2"
        android:layout_alignParentStart="true"
        style="@style/CustomCardViewStyle"
        app:cardElevation="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_Masuk"
                android:layout_centerInParent="false"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="false"
                android:layout_marginTop="11dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/belummemilikiakun" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:text="@string/login"
                    android:textColor="@color/navy" />
            </LinearLayout>

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/register"
                android:textColor="@color/navy"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/register"
                android:layout_alignStart="@+id/register"
                android:layout_marginStart="0dp"
                android:ems="10"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/nama"
                android:inputType="text"
                android:autofillHints="" />

            <EditText
                android:id="@+id/editTextText3"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/editTextText"
                android:layout_alignStart="@+id/editTextText"
                android:layout_alignEnd="@+id/editTextText"
                android:layout_marginStart="0dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/nomor_telepon"
                android:inputType="text"
                android:textColor="@color/navy"
                android:autofillHints="" />

            <EditText
                android:id="@+id/editTextText5"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/editTextText3"
                android:layout_alignStart="@+id/editTextText3"
                android:layout_alignEnd="@+id/editTextText"
                android:layout_marginStart="0dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/email"
                android:inputType="text"
                android:autofillHints="" />

            <EditText
                android:id="@+id/editTextText6"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/editTextText5"
                android:layout_alignStart="@+id/editTextText5"
                android:layout_alignEnd="@+id/editTextText"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/password"
                android:inputType="text"
                android:autofillHints="" />

            <Button
                android:id="@+id/btn_Masuk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextText6"
                android:layout_marginTop="20dp"
                android:text="@string/masuk" />

        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="587dp"
            android:visibility="gone">

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


</RelativeLayout>