<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/biru"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        app:srcCompat="@drawable/logo" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/rectangle_5"
        style="@style/CustomCardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/imageView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:padding="16dp">

            <ProgressBar
                android:id="@+id/progressBar"
                style="@android:style/Widget.Material.ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginEnd="157dp"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/RegistrationLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/textView43"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="32dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/belummemilikiakun" />

                <TextView
                    android:id="@+id/txtRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:text="@string/register"
                    android:textColor="@color/navy" />

            </LinearLayout>

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/login"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/register"
                android:layout_alignStart="@+id/register"
                android:layout_alignParentLeft="false"
                android:layout_marginTop="27dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/email"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtEmailLogin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/username"
                android:layout_alignStart="@+id/username"
                android:layout_marginTop="11dp"
                android:ems="10"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/email"
                android:inputType="text" />

            <TextView
                android:id="@+id/password"
                android:layout_width="169dp"
                android:layout_height="29dp"
                android:layout_below="@+id/txtEmailLogin"
                android:layout_alignStart="@+id/txtEmailLogin"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="11dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/password"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/password"
                android:layout_alignStart="@+id/password"
                android:layout_alignEnd="@+id/txtEmailLogin"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/password"
                android:inputType="text|textPassword" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/RegistrationLayout"
                android:text="@string/masuk" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtPasswordLogin"
                android:text="Lihat Password" />

            <TextView
                android:id="@+id/textView43"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/RegistrationLayout"
                android:layout_alignEnd="@+id/RegistrationLayout"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="Lupa Kata Sandi"
                android:textColor="@color/navy" />

        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="587dp"
            android:visibility="gone">

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


</RelativeLayout>