<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/biru"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:elevation="2dp"
                android:src="@drawable/logo"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/imageView3"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/poppins_medium"
                android:text="SELAMAT DATANG"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView3"
                android:layout_alignStart="@+id/textView3"
                android:layout_toStartOf="@+id/imageView3"
                android:ellipsize="end"
                android:fontFamily="@font/poppins_medium"
                android:text="User"
                android:textSize="14sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/pesanan_aktif"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/layanan_kami"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView71" />

        <TextView
            android:id="@+id/textView70"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="Voucher Anda"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/empty_tall_divider"
            android:gravity="center"
            android:orientation="horizontal"
            android:showDividers="middle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5">

            <RelativeLayout
                android:id="@+id/pesanan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvLayanan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/biru"
                    app:cardCornerRadius="20dp">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="14dp"
                        android:visibility="visible"
                        app:srcCompat="@drawable/delivery_man_box_svgrepo_com" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cvLayanan"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="4dp"
                    android:text="@string/pesanan" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/kalkulator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvKalkulator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/biru"
                    app:cardCornerRadius="20dp">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="14dp"
                        android:visibility="visible"
                        app:srcCompat="@drawable/calculator" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cvKalkulator"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="4dp"
                    android:text="@string/kalkulator" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/voucher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvVoucher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/biru"
                    app:cardCornerRadius="20dp">

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="14dp"
                        android:visibility="visible"
                        app:srcCompat="@drawable/coupon" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cvVoucher"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="4dp"
                    android:text="@string/voucher" />
            </RelativeLayout>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/homeRV"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressBar4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView70"
            app:trackCornerRadius="8dp"
            app:trackThickness="16dp" />

        <TextView
            android:id="@+id/textView71"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Voucher Anda Sekarang 0 Kurang 0 Lagi"
            app:layout_constraintStart_toStartOf="@+id/progressBar4"
            app:layout_constraintTop_toBottomOf="@+id/progressBar4" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>